# fine-rs

./: Cargo.toml  LICENSE.MIT
.cargo/: config.toml
crates/fine/: Cargo.toml
crates/fine/src/: asset_loader.rs  camera.rs  frame.rs  init.rs  lib.rs  mesh.rs  prelude.rs  scene.rs
crates/fine_math/: Cargo.toml
crates/fine_render/: Cargo.toml
crates/fine_render/src/: prelude.rs
crates/fine_render/src/context/: context_types.rs  mod.rs  options.rs  surface.rs
crates/fine_render/src/geometry/: geometry_data.rs  mod.rs  vertex.rs
crates/fine_render/src/pipeline/: mod.rs  pipeline_builder.rs
crates/fine_render/src/texture/: atlas.rs  mod.rs  raw.rs  texture.rs
crates/fine_render/src/util/: vertex_attribute.rs
crates/fine_transform/: Cargo.toml
crates/fine_transform/src/: node.rs  node_visitor.rs  transform.rs
crates/math/: Cargo.toml
crates/render/: Cargo.toml
crates/render/src/: constants.rs  lib.rs  mesh.rs  prelude.rs
crates/render/src/context/: mod.rs
crates/render/src/geometry/: indice.rs
crates/render/src/pipeline/: binding.rs  pipeline_builder.rs
crates/render/src/texture/: raw.rs  texture.rs
crates/render/src/util/: mod.rs
crates/transform/: .gitignore  Cargo.toml
crates/transform/src/: lib.rs  node.rs  node_visitor.rs  transform.rs
