[package]
name = "fine"
version = "0.1.0"
authors = ["furiouzz <info@chrsmsln.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.3"
render = { path = "../render" }
transform = { path = "../transform" }
math = { path = "../math" }
# gltf = "0.16"
bytemuck = "1.4.1"
glam = { version = "0.21.3", features = ["bytemuck"] }
async-executor = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = { version = "0.3.17", default-features = false, features = ["std", "executor"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.18"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-executor = "1.0"