[package]
name = "fine_render"
version = "0.1.0"
authors = ["furiouzz <christophe.massolin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-image = [ "image" ]

[dependencies]
wgpu = "0.10.1"
raw-window-handle = "0.3.3"
bytemuck = "1.4.1"
image = { version = "0.23.11", optional = true }