[package]
name = "fine_render"
version = "0.1.0"
authors = ["furiouzz <info@chrsmsln.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-image = [ "image" ]

[dependencies]
wgpu = "0.11.0"
raw-window-handle = "0.3.3"
bytemuck = "1.4.1"
image = { version = "0.23.11", optional = true }
